[BUGFIX] stretching photos on activies page

--- a/app/assets/stylesheets/activities.css.scss
+++ b/app/assets/stylesheets/activities.css.scss
@@ -2,6 +2,7 @@
 #recent_activities img {
     width: 50px;
     height: 50px;
+    object-fit: cover;
 }
 
 #recent_activities a {
